--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,6 +27,17 @@
   year={1900}
 }
 
+@article{nguyen2024data,
+  bibtex_show={true},
+  abbr={ArXiv},
+  title={Make the Most of Your Data: Changing the Training Data Distribution to Improve In-distribution Generalization Performance},
+  abstract={Can we modify the training data distribution to encourage the underlying optimization method toward finding solutions with superior generalization performance on in-distribution data? In this work, we approach this question for the first time by comparing the inductive bias of gradient descent (GD) with that of sharpness-aware minimization (SAM). By studying a two-layer CNN, we prove that SAM learns easy and difficult features more uniformly, particularly in early epochs. That is, SAM is less susceptible to simplicity bias compared to GD. Based on this observation, we propose USEFUL, an algorithm that clusters examples based on the network output early in training and upsamples examples with no easy features to alleviate the pitfalls of the simplicity bias. We show empirically that modifying the training data distribution in this way effectively improves the generalization performance on the original data distribution when training with (S)GD by mimicking the training dynamics of SAM. Notably, we demonstrate that our method can be combined with SAM and existing data augmentation strategies to achieve, to the best of our knowledge, state-of-the-art performance for training ResNet18 on CIFAR10, STL10, CINIC10, Tiny-ImageNet; ResNet34 on CIFAR100; and VGG19 and DenseNet121 on CIFAR10.},
+  author={Nguyen, Dang and Haddad, Paymon and Gan, Eric and and Mirzasoleiman, Baharan},
+  journal={arXiv preprint arXiv:2306.11957},
+  arxiv={2404.17768},
+  year={Preprints}
+}
+
 @article{joshi2023spuco,
   bibtex_show={true},
   abbr={ArXiv},
@@ -40,8 +51,6 @@
   website={https://spuco.readthedocs.io/en/latest/},
   spurious={true}
 }
-
-
 
 
 ##############################################################
@@ -61,7 +70,8 @@
 @article{xue2024fewshot,
   bibtex_show={true},
   abbr={ICML},
-  title={Pretrained machine learning models need to be adapted to distribution shifts when deployed in new target environments. When obtaining labeled data from the target distribution is expensive, few-shot adaptation with only a few examples from the target distribution becomes essential. In this work, we propose MixPro, a lightweight and highly data-efficient approach for few-shot adaptation. MixPro first generates a relatively large dataset by mixing (linearly combining) pre-trained embeddings of large source data with those of the few target examples. This process preserves important features of both source and target distributions, while mitigating the specific noise in the small target data. Then, it trains a linear classifier on the mixed embeddings to effectively adapts the model to the target distribution without overfitting the small target data. Theoretically, we demonstrate the advantages of MixPro over previous methods. Our experiments, conducted across various model architectures on 8 datasets featuring different types of distribution shifts, reveal that MixPro can outperform baselines by as much as 7%, with only 2-4 target examples.},
+  title={Few-shot Adaption to Distribution Shifts By Mixing Source and Target Embeddings},
+  abstract={Pretrained machine learning models need to be adapted to distribution shifts when deployed in new target environments. When obtaining labeled data from the target distribution is expensive, few-shot adaptation with only a few examples from the target distribution becomes essential. In this work, we propose MixPro, a lightweight and highly data-efficient approach for few-shot adaptation. MixPro first generates a relatively large dataset by mixing (linearly combining) pre-trained embeddings of large source data with those of the few target examples. This process preserves important features of both source and target distributions, while mitigating the specific noise in the small target data. Then, it trains a linear classifier on the mixed embeddings to effectively adapts the model to the target distribution without overfitting the small target data. Theoretically, we demonstrate the advantages of MixPro over previous methods. Our experiments, conducted across various model architectures on 8 datasets featuring different types of distribution shifts, reveal that MixPro can outperform baselines by as much as 7%, with only 2-4 target examples.},
   author={Xue, Yihao and Payani, Ali and Yang, Yu and Mirzasoleiman, Baharan},
   journal={International Conference on Machine Learning (ICML)},
   arxiv={2305.14521},
@@ -77,8 +87,7 @@
   author={Lu, Haofan and Vattheuer, Vattheuer and Mirzasoleiman, Baharan and Abari, Omid},
   journal={International Conference on Machine Learning (ICML)},
   arxiv={2403.03241},
-  year={2024},
-  spurious={true}
+  year={2024}
 }
 
 @article{yang2023contrastive,
