--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -84,7 +84,7 @@
   abbr={ICML},
   title={NeWRF: A Deep Learning Framework for Wireless Radiation Field Reconstruction and Channel Prediction},
   abstract={We present NeWRF, a deep learning framework for predicting wireless channels. Wireless channel prediction is a long-standing problem in the wireless community and is a key technology for improving the coverage of wireless network deployments. Today, a wireless deployment is evaluated by a site survey which is a cumbersome process requiring an experienced engineer to perform extensive channel measurements. To reduce the cost of site surveys, we develop NeWRF, which is based on recent advances in Neural Radiance Fields (NeRF). NeWRF trains a neural network model with a sparse set of channel measurements, and predicts the wireless channel accurately in any location in the site. We introduce a series of techniques that integrate wireless propagation properties into the NeWRF framework to account for the fundamental differences between the behavior of light and wireless signals. We conduct extensive evaluations of our framework and show that our approach can accurately predict channels at unvisited locations with significantly lower measurement density than the prior state-of-the-art.},
-  author={Lu, Haofan and Vattheuer, Vattheuer and Mirzasoleiman, Baharan and Abari, Omid},
+  author={Lu, Haofan and Vattheuer, Christopher and Mirzasoleiman, Baharan and Abari, Omid},
   journal={International Conference on Machine Learning (ICML)},
   arxiv={2403.03241},
   year={2024}
